--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,17 @@ services:
       - ./src:/var/www/
     depends_on:
       - php
+    platform: linux/amd64
 
   php:
     build: ./docker/php
     volumes:
       - ./src:/var/www/
+    platform: linux/amd64
 
   mysql:
     image: mysql:8.0.26
+    platform: linux/amd64
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel_db
@@ -31,6 +34,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
+    platform: linux/amd64
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOST=mysql
