--- a/src/package.json
+++ b/src/package.json
@@ -13,9 +13,14 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^17.3.1",
+        "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
+        "laravel-echo": "^1.17.0",
+        "pusher-js": "^8.4.0-rc2",
+        "tailwindcss": "^3.4.15",
         "vue": "^3.5.13"
     }
 }
