--- a/src/package.json
+++ b/src/package.json
@@ -10,12 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.13.13",
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vue-loader": "^17.3.1",
-        "vue-template-compiler": "^2.7.16"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^17.3.1"
     },
     "dependencies": {
         "laravel-echo": "^1.17.0",
