--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
         "vue-loader": "^17.3.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "laravel-echo": "^1.17.0",
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.15",
