--- a/src/package.json
+++ b/src/package.json
@@ -10,24 +10,32 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.13.13",
+        "@babel/core": "^7.26.7",
+        "@babel/preset-env": "^7.26.7",
+        "@babel/preset-react": "^7.26.3",
+        "@babel/preset-typescript": "^7.26.0",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "axios": "^0.21.4",
         "bootstrap": "^5.3.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.83.4",
-        "sass-loader": "^11.0.1",
+        "sass-loader": "^12.6.0",
+        "ts-loader": "^9.5.2",
+        "typescript": "^5.7.3",
         "vue-loader": "^17.3.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "laravel-echo": "^1.17.0",
         "pusher-js": "^8.4.0-rc2",
+        "socket.io-client": "^4.8.1",
         "tailwindcss": "^3.4.15",
         "vue": "^3.5.13"
     }
