--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/sidebar.css": "/css/sidebar.css"
+    "/js/app.js": "/js/app.js?id=989fb5dfda1e2b1fe500c3de1ecb1f89",
+    "/css/app.css": "/css/app.css?id=2c267f71de401db3e403a818e57e98b1",
+    "/css/sidebar.css": "/css/sidebar.css?id=43c7b8e0b0a663006e0abbe5cda9900d"
 }
