--- a/src/package.json
+++ b/src/package.json
@@ -33,10 +33,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "@react-three/drei": "^9.121.4",
+        "@react-three/fiber": "^8.17.14",
         "laravel-echo": "^1.17.0",
         "pusher-js": "^8.4.0-rc2",
         "socket.io-client": "^4.8.1",
         "tailwindcss": "^3.4.15",
+        "three": "^0.173.0",
         "vue": "^3.5.13"
     }
 }
