--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=bec57323ef067a3111f729123659c05b",
+    "/js/app.js": "/js/app.js?id=114c434541effbd5264ca6d1401d7404",
     "/css/app.css": "/css/app.css?id=2c267f71de401db3e403a818e57e98b1",
-    "/css/sidebar.css": "/css/sidebar.css?id=43c7b8e0b0a663006e0abbe5cda9900d"
+    "/css/Sidebar.css": "/css/Sidebar.css?id=43c7b8e0b0a663006e0abbe5cda9900d"
 }
