--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install Composer dependencies
       run: |
         curl -sS https://getcomposer.org/installer | php
-        php composer.phar install
+        php composer.phar install --working-dir=src
 
     # .envファイルのセットアップ
     - name: Set up .env
