”デプロイテスト実行エラー修正”

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,9 @@ jobs:
         echo "$PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
         ssh -i private_key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
+
+          cd furima
+          
           git pull origin main  # リモートリポジトリから最新のコードをプル
 
           docker-compose exec -T php bash -c 'composer install && php artisan migrate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache'
