--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name:  Deploy Pipeline
 
 on:
   push:
@@ -7,64 +7,27 @@ on:
   pull_request:
     branches:
       - main  # pull requestがmainブランチに対して行われた時
+  workflow_dispatch:
+
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    # リポジトリのチェックアウト
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    # PHP環境のセットアップ
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.3'  # 使用するPHPのバージョン
-
-    # Composerのインストール
-    - name: Install Composer dependencies
-      run: |
-        curl -sS https://getcomposer.org/installer | php
-        php composer.phar install --working-dir=src
-
-    # .envファイルのセットアップ
-    - name: Set up .env
-      run: |
-        cp src/.env.example src/.env
-        cd src
-        php artisan key:generate
-
-    # PHPUnitでテストの実行（任意）
-    - name: Run tests
-      run: |
-        cd src
-        vendor/bin/phpunit
-
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # buildが成功した後にdeployを実行
 
     steps:
-    # リポジトリのチェックアウト
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    # SSHでEC2へデプロイ
-    - name: Deploy to EC2
-      env:
-        PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
-        SERVER_IP: ${{ secrets.EC2_SERVER_IP }}
-        USERNAME: ${{ secrets.EC2_USERNAME }}
-      run: |
-        echo "$PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
-        ssh -i private_key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
-
-          cd furima
-
-          git pull origin main
-
-          docker-compose exec -T php bash -c 'composer install && php artisan migrate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache'
-        EOF
+      - name: Deploy to EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+          SERVER_IP: ${{ secrets.EC2_SERVER_IP }}
+          USERNAME: ${{ secrets.EC2_USERNAME }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
+          ssh -i private_key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
+            cd furima
+            git pull origin main
+            docker-compose exec -T php bash -c 'composer install && php artisan migrate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache'
+          EOF
