”ci/cdコード変更”

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,10 +9,25 @@ on:
       - develop
   workflow_dispatch:
 
-
 jobs:
   ci:
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: laravel_test
+          MYSQL_USER: laravel_user
+          MYSQL_PASSWORD: laravel_pass
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout code
@@ -28,13 +43,28 @@ jobs:
           curl -sS https://getcomposer.org/installer | php
           php composer.phar install --working-dir=src
 
-      - name: Set up .env
+      - name: Set up .env.testing
         run: |
-          cp src/.env.example src/.env
+          cp src/.env.example src/.env.testing
+          echo "APP_ENV=testing" >> src/.env.testing
+          echo "DB_CONNECTION=mysql" >> src/.env.testing
+          echo "DB_HOST=127.0.0.1" >> src/.env.testing
+          echo "DB_PORT=3306" >> src/.env.testing
+          echo "DB_DATABASE=laravel_test" >> src/.env.testing
+          echo "DB_USERNAME=laravel_user" >> src/.env.testing
+          echo "DB_PASSWORD=laravel_pass" >> src/.env.testing
+
+      - name: Generate app key
+        run: |
           cd src
-          php artisan key:generate
+          php artisan key:generate --env=testing
+
+      - name: Run migrations
+        run: |
+          cd src
+          php artisan migrate --env=testing --force
 
       - name: Run tests
         run: |
           cd src
-          vendor/bin/phpunit
+          php artisan test
