--- a/src/.gitignore
+++ b/src/.gitignore
@@ -14,3 +14,7 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/public/css/app.css
+/public/js/app.js
+/public/mix-manifest.json
+/public/js/app.js.LICENSE.txt
