--- a/src/.gitignore
+++ b/src/.gitignore
@@ -18,3 +18,6 @@ yarn-error.log
 /public/js/app.js
 /public/mix-manifest.json
 /public/js/app.js.LICENSE.txt
+/public/css/Sidebar.css
+install.log
+
