”ビルド時のインストール変更”

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,11 @@ services:
     build: ./docker/php
     volumes:
       - ./src:/var/www/
+      - ./src/node_modules:/var/www/node_modules # node_modulesをホスト側と共有
+    environment:
+      - COMPOSER_ALLOW_SUPERUSER=1
     platform: linux/amd64
+    command: /bin/bash -c "npm install && npm run dev && php-fpm"  # ビルドと開発環境起動
 
   mysql:
     image: mysql:8.0.41
