--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,10 +38,25 @@ jobs:
         with:
           php-version: '8.3'
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22' # Node.jsのバージョンは必要に応じて変えてね
+
       - name: Install Composer dependencies
         run: |
           curl -sS https://getcomposer.org/installer | php
           php composer.phar install --working-dir=src
+
+      - name: Install npm dependencies
+        run: |
+          cd src
+          npm install
+
+      - name: Build frontend assets
+        run: |
+          cd src
+          npm run build
 
       - name: Set up .env.testing
         run: |
