”gitignoreの設定用にテストコードにコマンド追加”

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Build frontend assets
         run: |
           cd src
-          npm run build
+          npm run production
 
       - name: Set up .env.testing
         run: |
