--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
           ssh -i private_key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
             cd furima
             git pull origin main
+            sudo docker-compose down
+            sudo docker-compose up -d --build
             docker-compose exec -T php bash -c '
             composer install &&
             npm install &&
