--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,11 @@ jobs:
             sudo docker-compose down
             sudo docker-compose up -d --build
             docker-compose exec -T php bash -c '
-            composer install &&
-            npm install &&
-            npm run production &&
-            php artisan migrate --force &&
-            php artisan config:cache &&
-            php artisan route:cache &&
-            php artisan view:cache'
+            docker-compose exec -T php composer install
+            docker-compose exec -T php npm install
+            docker-compose exec -T php npm run production
+            docker-compose exec -T php php artisan migrate --force
+            docker-compose exec -T php php artisan config:cache
+            docker-compose exec -T php php artisan route:cache
+            docker-compose exec -T php php artisan view:cache
           EOF
-          
