--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           ssh -i private_key.pem -o StrictHostKeyChecking=no $USERNAME@$SERVER_IP << 'EOF'
             cd furima/src
             git pull origin main
-            sudo docker-compose up -d
+            sudo docker-compose up -d --build
             sudo docker-compose exec -T php bash -c '
             composer install &&
             npm install &&
