--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
             git pull origin main
             sudo docker-compose up -d --build
             sleep 10
-            sudo docker-compose exec php bash "
+            sudo docker-compose exec php bash -c "
               composer install &&
               npm install &&
               npm run production &&
