--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,12 +5,10 @@ server {
 
     root /var/www/public;
 
-    # Laravelの通常のリクエスト処理
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    # PHP処理の設定
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
@@ -20,9 +18,8 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    # Vite の開発サーバー用設定（開発中のみ）
     location /@vite/ {
-        proxy_pass http://localhost:5173/; # Viteのデフォルトポートである5173にプロキシ
+        proxy_pass http://localhost:5173/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -30,8 +27,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # Viteの静的ファイル用設定（ビルド後）
     location /dist/ {
-        root /var/www/public;  # Viteでビルドされたファイルを提供するため
+        root /var/www/public;
     }
 }
