--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,13 @@ services:
     ports:
       - 8080:80
 
+  app:
+    build: ./docker/php
+    volumes:
+      - .:/var/www/
+    environment:
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
