--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,8 +19,8 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: secret
           MYSQL_DATABASE: laravel_test
-          MYSQL_USER: ${DB_USERNAME}
-          MYSQL_PASSWORD: ${DB_PASSWORD}
+          MYSQL_USER: laravel_user
+          MYSQL_PASSWORD: laravel_pass
         ports:
           - 3306:3306
         options: >-
