”default.confにコメントアウト追加”

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,33 +1,62 @@
 server {
+    # ポート80（HTTP）で待ち受け
     listen 80;
+
+    # デフォルトのインデックスファイルの優先順位を指定
     index index.php index.html;
+
     server_name localhost;
 
+    # ドキュメントルートのパス（Laravelのpublicディレクトリを指す）
     root /var/www/public;
 
     location / {
+        # 存在するファイル・ディレクトリがあればそれを返し、なければindex.phpに渡す（Laravel向けの設定）
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
+        # PHPファイルとそのパス情報を分割
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+        # PHP-FPMコンテナ（ホスト名php、ポート9000）へリクエストを転送
         fastcgi_pass php:9000;
+
+        # デフォルトのPHPインデックスファイルを指定
         fastcgi_index index.php;
+
+        # FastCGIの標準パラメータを読み込む
         include fastcgi_params;
+
+        # 実行するスクリプトのパスをFastCGIに渡す
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        # パス情報をFastCGIに渡す
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location /@vite/ {
+        # Vite開発サーバーへのリバースプロキシ設定（HMR用）
         proxy_pass http://localhost:5173/;
+
+        # HTTP/1.1を使用（WebSocketのため）
         proxy_http_version 1.1;
+
+        # WebSocket用ヘッダーを追加
         proxy_set_header Upgrade $http_upgrade;
+
+        # 接続をアップグレードに維持
         proxy_set_header Connection 'upgrade';
+
+        # ホストヘッダーを元のリクエストのホストに設定
         proxy_set_header Host $host;
+
+        # キャッシュをバイパスして常に最新の情報を取得
         proxy_cache_bypass $http_upgrade;
     }
 
     location /dist/ {
+        # Viteのビルド成果物を配信する静的ファイルルート
         root /var/www/public;
     }
 }
